@@ -12,6 +12,6 @@ install:
 jdk: oraclejdk7
 
 script:
-  - non init "My Game"
-  - non pack desktop
-  - non pack android
+  - non new "My Game"
+  - non build desktop
+  - non build android
