@@ -29,10 +29,11 @@ allprojects {
         appName = cfg.name
         packageName = cfg.package
         packageDir = cfg.package.replace('.', '/')
-        screenOrientation = cfg.window ? (cfg.window.orientation ? cfg.window.orientation : "sensor") : "sensor"
-        nonVersion = file('VERSION').exists() ? file('VERSION').text.trim() : file('../VERSION').text.trim()
         gdxVersion = '1.6.2'
         roboVMVersion = '1.3.0'
+        screenOrientation =
+            cfg.window && cfg.window.orientation ?
+            cfg.window.orientation : "sensor"
         vals = [[
             "%APP_NAME%",
             "%PACKAGE%",
@@ -130,30 +131,30 @@ clean.dependsOn cleanAssets
 task init << {
     file("../assets").mkdir()
 	
-    def origpname = (project.hasProperty("initName") ? initName : "My Project").replace("\"", "")
+    def origpname = initName.replace('"', "")
     def pname = Normalizer
-           .normalize(origpname, Normalizer.Form.NFD)
-           .replace(" ", "")
-           .replaceAll("[^\\p{ASCII}]", "")
-           .toLowerCase()
+        .normalize(origpname, Normalizer.Form.NFD)
+        .replace(" ", "")
+        .replaceAll("[^\\p{ASCII}]", "")
+        .toLowerCase()
 
     def origuname = System.getProperty("user.name", "username")
     def uname = Normalizer
-           .normalize(origuname, Normalizer.Form.NFD)
-           .replace(" ", "")
-           .replace(".", "")
-           .replace("_", "")
-           .replace("-", "")
-           .replaceAll("[^\\p{ASCII}]", "")
-           .toLowerCase()
+        .normalize(origuname, Normalizer.Form.NFD)
+        .replace(" ", "")
+        .replace(".", "")
+        .replace("_", "")
+        .replace("-", "")
+        .replaceAll("[^\\p{ASCII}]", "")
+        .toLowerCase()
 
-    def text = "---\n"
-    text += "name: " + origpname + "\n"
-    text += "package: com." + uname + "." + pname + "\n"
-    text += "version: 1.0"
-    def fl = new File("../config.yml")
-    fl.text = text
+    def text =
+        "---\n" +
+        "  name: ${origpname}\n" +
+        "  package: com.${uname}.${pname}\n"
+        "  version: 1.0"
 
+    new File("../config.yml").text = text
     copy { from "res"; into "../assets"; include "main.moon" }
 }
 
@@ -183,9 +184,7 @@ task update(dependsOn: [':rocks', ':updateAssets']) {
 }
 
 task updateDesktop << {
-    deldir(file("desktop/src"))
     def out = "android/assets/non"
-    
     copyAndReplace("platforms/desktop/DesktopLauncher.java", "desktop/src/$packageDir/desktop/DesktopLauncher.java")
     copyAndResizeIcon("${out}/icon-16.png", 16)
     copyAndResizeIcon("${out}/icon-32.png", 32)
@@ -195,12 +194,6 @@ task updateDesktop << {
 }
 
 task updateAndroid(dependsOn: 'android:copyNatives') << {
-    deldir(file("android/src"))
-    file("android/res/drawable-mdpi").mkdirs()
-    file("android/res/drawable-hdpi").mkdirs()
-    file("android/res/drawable-xhdpi").mkdirs()
-    file("android/res/drawable-xxhdpi").mkdirs()
-    
     copyAndReplace("platforms/android/AndroidManifest.xml", "android/AndroidManifest.xml")
     copyAndReplace("platforms/android/AndroidLauncher.java", "android/src/$packageDir/android/AndroidLauncher.java")
     copyAndResizeIcon("android/res/drawable-mdpi/ic_launcher.png", 48)
@@ -211,16 +204,12 @@ task updateAndroid(dependsOn: 'android:copyNatives') << {
 }
 
 task updateIOS << {
-    def out = "ios/data"
-    deldir(file(out))
-    file(out).mkdirs()
-    
     copyAndReplace("platforms/ios/robovm.properties", "ios/robovm.properties")
     copyAndReplace("platforms/ios/IOSLauncher.java", "ios/src/$packageDir/ios/IOSLauncher.java")
-    copyAndResizeIcon("${out}/Icon.png", 57)
-    copyAndResizeIcon("${out}/Icon-72.png", 72)
-    copyAndResizeIcon("${out}/Icon@2x.png", 114)
-    copyAndResizeIcon("${out}/Icon-72@2x.png", 144)
+    copyAndResizeIcon("ios/data/Icon.png", 57)
+    copyAndResizeIcon("ios/data/Icon-72.png", 72)
+    copyAndResizeIcon("ios/data/Icon@2x.png", 114)
+    copyAndResizeIcon("ios/data/Icon-72@2x.png", 144)
 }
 
 task updateAssets(type: Sync) {
@@ -239,27 +228,12 @@ def configure() {
         ext.cfg = new org.yaml.snakeyaml.Yaml().load(f.text)
     } else {
         ext.cfg = new org.yaml.snakeyaml.Yaml().load(
-            '---\n' +
-            'name: non\n' +
-            'package: non\n' +
-            'version: 1.0'
+            "---\n" +
+            "  name: non\n" +
+            "  package: non\n" +
+            "  version: 1.0"
         )
     }
-}
-
-def copyAndReplace(input, out) {
-    def values = ext.vals
-    def total = values[0].size() - 1
-    def txt = file(input).text
-    
-    for(i in 0..total) {
-        txt = txt.replace(values[0][i], values[1][i])
-    }
-    
-    out = new File(out)
-    out.getParentFile().mkdirs()
-    out.createNewFile()
-    out.write(txt)
 }
 
 def deldir(file) {
@@ -280,15 +254,32 @@ def deldir(file) {
     file.delete()
 }
 
+def copyAndReplace(input, out) {
+    def values = ext.vals
+    def total = values[0].size() - 1
+    def txt = file(input).text
+    
+    for(i in 0..total) {
+        txt = txt.replace(values[0][i], values[1][i])
+    }
+    
+    out = new File(out)
+    if (out.exists()) out.delete()
+    out.getParentFile().mkdirs()
+    out.createNewFile()
+    out.write(txt)
+}
+
 def copyAndResizeIcon(targetPath, newSize) {
     def source = file("../icon.png").exists() ? file("../icon.png") : file("res/icon.png")
-    def target = file(targetPath)
+    def target = new File(targetPath)
     if (target.exists()) target.delete()
+    target.getParentFile().mkdirs()
     target.createNewFile()
     
     def img = ImageIO.read(source) 
 
-    new BufferedImage( newSize, newSize, img.type ).with { 
+    new BufferedImage(newSize, newSize, img.type).with { 
         i -> createGraphics().with { 
             setRenderingHint( KEY_INTERPOLATION, VALUE_INTERPOLATION_BICUBIC )
             drawImage(img, 0, 0, newSize, newSize, null)
